Fixed: menu layout on mobile

--- a/styles/Content.module.scss
+++ b/styles/Content.module.scss
@@ -7,9 +7,8 @@
     align-content: flex-start;
     justify-content: flex-start;
     padding-top: 12rem;
-    padding-left: 12vw;
-    padding-right: 12vw;
     padding-bottom: 14rem;
+    max-width: 100vw;
     z-index: 1;
 
     /* FIXED BACKGROUND
@@ -30,7 +29,7 @@
 }
 
 .Title {
-    margin-left: 4rem;
+    margin-left: 16rem;
     font-size: $title-size;
     font-weight: 300;
 }
@@ -39,6 +38,8 @@
     overflow: auto; // TODO: Better overflow design
     font-size: $content-text-size;
     font-weight: 100;
+    margin-left: 12rem;
+    max-width: 80vw;
     text-align: left;
     z-index: 5;
 }
@@ -51,5 +52,21 @@
     .Content {
       background-attachment: scroll;
       background-position: center center;
+    }
+}
+
+@media only screen and (max-device-width: 720px) {
+    .Content {
+      background-attachment: scroll;
+      background-position: center center;
+    }
+    .Title {
+        margin-left: 0;
+        align-self: center;
+    }
+    .Info {
+        margin-left: 0;
+        padding: 0 1rem;
+        align-self: center;
     }
 }
