--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,7 +1,6 @@
 .container {
   display: grid;
-  grid-row: auto;
-  grid-template-columns: auto;
+  grid-template-rows: auto;
   grid-template-areas: 
     "header"
     "content"
